fixed spacing

--- a/packages/rule-components/src/ReportDetails/index.scss
+++ b/packages/rule-components/src/ReportDetails/index.scss
@@ -11,7 +11,7 @@
   }
 
   .ins-c-rule__rule-feedback-like-button, .ins-c-rule__rule-feedback-dislike-button {
-    padding: 0 5px;
+    padding: 0 var(--pf-global--spacer--xs);
   }
 }
 
